# kdeltachat

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  accounts.cpp  accounts.h  accounts_model.cpp  accounts_model.h  build.sh  chat.cpp  chat.h  chatlist.cpp  chatlist.h  contact.cpp  contact.h  context.cpp  context.h  dcevent.cpp  dcevent.h  eventemitter.cpp  eventemitter.h  eventloopthread.cpp  eventloopthread.h  lot.cpp  lot.h  main.cpp  message.cpp  message.h  notifications.h  qml.qrc  qtquickcontrols2.conf
qml/: AccountsPage.qml  ChatPage.qml  ChatlistItem.qml  ChatlistPage.qml  ComposePane.qml  ConfigurePage.qml  HtmlViewSheet.qml  Message.qml  NewChatPage.qml  SettingsPage.qml  SplashPage.qml  main.qml
res/: CMakeLists.txt  chat.delta.KDeltaChat.desktop
scripts/: lint.sh
